== 5.3.2

* New --name="My Server" option to specify server name from the scout command.

== 5.3.1

* Write a log message if a full disk prevents Scout from creating a history file.

== 5.3.0

* Ping over http instead of https. All plan retrievals and check-ins are still SSL
* Added ability to post troubleshooting report back to scoutapp.com  

== 5.2.2

* More graceful handling of *rare* client_history.yaml corruption

== 5.2.1

* Added private-key based code signing
* Added local plugin overrides
* Added local ad-hoc plugins

== 5.1.5

* Added sleep interval directive. Agent will only sleep when used in non-interactive mode.

== 5.1.4

* Normalized header formats

== 5.1.3

* Added debug output when contact with server cannot be established
* Updated to json_pure 1.4.2

== 5.1.2

* Added backtrace to Plugin code compile errors

== 5.1.1

* Fixed Counter functionality for per-minute metrics

== 5.1.0

* Agent now reports data on initial install
* If history file is empty, Agent will resume normal checkin when it can write history file again (thx @jnewland)
* inclusion of counter functionality (thx @lindvall)

== 5.0.3

* fixed regression: Error when running `scout AGENT_KEY` without first running scout and manually entering the agent key 

== 5.0.2

* fixed silent failure when plugin didn't inherit from Scout::Plugin
* beefed up error reporting

== 5.0.1

* plugin errors are now reported to scout server as errors, for easier plugin troubleshooting

== 5.0.0

* crontab must now run Scout every minute, regardless of what plan you are on
* Support for server downtime notifications
* Pings server every minute. Performs actual checkin on schedule provided by server
* Support for plugin option definition via an inline YAML file.
* Easier format for providing plugin arguments in test mode (scout help for details)
* Prints plugin arguments, including defaults, when run in test mode

== 4.0.2

* Check-in once after all plugins are run instead of once for each plugin for