@@ -1,3 +1,7 @@
+== Master
+
+* Sending embedded options to server for local & plugin overrides.
+
 == 5.3.2
 
 * New --name="My Server" option to specify server name from the scout command.
